quase pronto deu erro mapa preto

--- a/index.html
+++ b/index.html
@@ -34,15 +34,18 @@
 
 <div id="tempoContainer">
   <div id="cronometroVisual">
+     <div class="circulo-wrapper">
+      <!-- Círculo decorativo de fundo -->
+      <div id="fundo-circulo" class="fundo-circulo"></div>
     <div class="circulo">
       <div class="tempoTexto">0:00.00</div>
       <div class="orbita">
         <div id="bolinha" class="bolinha"></div>
         <div id="cronometroTotal"></div>
       </div>
+      </div>
     </div>
   </div>
- 
 </div>
 
 
