--- a/index.html
+++ b/index.html
@@ -2,15 +2,11 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
   <title>Jogo dos Estados</title>
-
-
 </head>
 <body>
-   <div id="confetti-container"></div>
-
-
 
 
 
@@ -73,10 +69,10 @@
       <!-- mapa -->
         <div id="mapa">
       <!-- Aqui entra seu SVG do mapa e código do jogo -->
-          <svg id="svg-map"
-     viewBox="0 0 450 460"
-     preserveAspectRatio="xMidYMid meet"
-     style="width: 80%; height: 80vh;">
+     <svg id="svg-map"
+  viewBox="0 0 450 460"
+  preserveAspectRatio="xMidYMid meet">
+
     <g>
       <a  class="norte" data-title="Tocantins">
         <path  d="M289.558,235.641
@@ -93,7 +89,7 @@
         c1.148,4.959-0.821,8.6-1.808,13.42c-0.822,4.162-0.219,8.299-0.987,12.297c-0.271,1.286-4.407,5.723-5.559,7.148
         c-1.616-1.426-63.952-37.248-73.1-36.265c1.149-3.738,2.438-9.559-0.741-12.723c-8.625-8.572-0.135-19.335-0.162-19.432
         c-0.546-1.725-5.396-6.079-0.026-7.175c-3.175,0.959-1.944-4.027,0.875-3.012C316.726,200.733,314.044,200.527,313.276,197.775z"></path>
-       
+ 
       </a>
       <a  class="nordeste" data-title="Sergipe">
         <path  d="M408.561,191.735
