--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
 
+<div id="confetti-container"></div>
 
   <!-- Tela de pré-jogo -->
   <div id="telaInicio">
@@ -388,8 +389,8 @@
 
   </div><!-- Tela de jogo -->
   <!-- 🎵 Música de fundo -->
-  <audio id="musicaJogo" src="sons/musica.mp3" autoplay loop></audio>
-  <script src="script.js"></script>
+  <audio id="musicaJogo" src="sons/musica.mp3"></audio>
+  <script src="script.js" defer></script>
 
 
 
