--- a/index.html
+++ b/index.html
@@ -390,6 +390,8 @@
   </div><!-- Tela de jogo -->
   <!-- 🎵 Música de fundo -->
   <audio id="musicaJogo" src="sons/musica.mp3"></audio>
+  <audio id="musicaConclusao" src="sons/conclusao.mp3"></audio>
+
   <script src="script.js" defer></script>
 
 
